--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ pylint = "*"
 django = "*"
 django-heroku = "*"
 gunicorn = "*"
+django-registration-redux = "*"
 
 [requires]
 python_version = "3.7"
